internal/kgateway/agentgatewaysyncer/testdata/outputs/direct-response.yaml
Binds:
- key: 8080/default/example-gateway
  port: 8080
Listeners:
- bindKey: 8080/default/example-gateway
  gatewayName: default/example-gateway
  key: default-example-gateway-http
  name: http
  protocol: HTTP
Routes:
- filters:
  - directResponse:
      body: VXNlci1hZ2VudDogKgpEaXNhbGxvdzogL2RpcmVjdC1yZXNwb25zZQo=
      status: 510
  hostnames:
  - example.com
  key: default.example.0.0.http
  listenerKey: default-example-gateway-http
  routeName: default/example
