internal/kgateway/agentgatewaysyncer/testdata/outputs/http-routing-proxy.yaml
Addresses:
  - service:
      hostname: example-svc.default.svc.cluster.local
      name: example-svc
      namespace: default
      ports:
        - servicePort: 80
  - service:
      hostname: foo-svc.default.svc.cluster.local
      name: foo-svc
      namespace: default
      ports:
        - servicePort: 80
  - service:
      hostname: bar-svc.default.svc.cluster.local
      name: bar-svc
      namespace: default
      ports:
        - servicePort: 80
  - service:
      hostname: bar-svc-canary.default.svc.cluster.local
      name: bar-svc-canary
      namespace: default
      ports:
        - servicePort: 80
Binds:
  - key: 80/default/agentgateway-example
    port: 80
Listeners:
  - bindKey: 80/default/agentgateway-example
    gatewayName: default/agentgateway-example
    key: agentgateway-example-agentgateway-autogenerated-k8s-gateway-http
    name: http
    protocol: HTTP
Routes:
  - backends:
      - kind:
          port: 80
          service: default/foo-svc.default.svc.cluster.local
        port: 80
        weight: 1
    hostnames:
      - foo.example.com
    key: default.foo-route.0.0.http
    listenerKey: agentgateway-example-agentgateway-autogenerated-k8s-gateway-http
    matches:
      - path:
          pathPrefix: /login
    routeName: default/foo-route
  - backends:
      - kind:
          port: 80
          service: default/bar-svc-canary.default.svc.cluster.local
        port: 80
        weight: 1
    hostnames:
      - bar.example.com
    key: default.bar-route.0.0.http
    listenerKey: agentgateway-example-agentgateway-autogenerated-k8s-gateway-http
    matches:
      - headers:
          - exact: canary
            name: env
    routeName: default/bar-route
  - backends:
      - kind:
          port: 80
          service: default/bar-svc.default.svc.cluster.local
        port: 80
        weight: 1
    hostnames:
      - bar.example.com
    key: default.bar-route.1.0.http
    listenerKey: agentgateway-example-agentgateway-autogenerated-k8s-gateway-http
    routeName: default/bar-route
