internal/kgateway/agentgatewaysyncer/testdata/outputs/no-route.yaml
Binds:
  - key: 80/default/example-gateway
    port: 80
Listeners:
  - bindKey: 80/default/example-gateway
    gatewayName: default/example-gateway
    key: default-example-gateway-http
    name: http
    protocol: HTTP
